--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -41,6 +41,15 @@
   }
 }
 
+.text-big {
+  font-family: var(--font-fasthand);
+}
+
+.font-fast-hand {
+  font-family: var(--font-font-local);
+
+}
+
 body {
   color: white;
   font-size: 14px;
@@ -125,12 +134,10 @@ body {
 }
 
 .skeleton-loading {
-  background: linear-gradient(
-    90deg,
-    rgba(0, 0, 0, 0.06) 25%,
-    rgba(0, 0, 0, 0.15) 37%,
-    rgba(0, 0, 0, 0.06) 63%
-  );
+  background: linear-gradient(90deg,
+      rgba(0, 0, 0, 0.06) 25%,
+      rgba(0, 0, 0, 0.15) 37%,
+      rgba(0, 0, 0, 0.06) 63%);
   background-size: 400% 100%;
   background-size: 400% 100%;
   animation-name: loading;
@@ -160,11 +167,9 @@ body {
 }
 
 .line-loading {
-  background: radial-gradient(
-    circle,
-    rgba(63, 94, 251, 1) 0%,
-    rgba(252, 70, 107, 1) 100%
-  );
+  background: radial-gradient(circle,
+      rgba(63, 94, 251, 1) 0%,
+      rgba(252, 70, 107, 1) 100%);
   background-size: 400% 100%;
   background-size: 400% 100%;
   animation-name: loading;
@@ -197,36 +202,182 @@ body {
   perspective: 1500px;
 }
 
-.cube {
-  position: relative;
-  width: 200px;
-  transform-style: preserve-3d;
-  animation: rotateCube 5s infinite linear;
+.animation {
+
+  &__flicker {
+    animation: flicker 1s infinite ease-in-out alternate;
+
+    @keyframes flicker {
+      0% {
+        opacity: 0.7;
+        transform: scale(0.98);
+      }
+
+      100% {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+
+    @-webkit-keyframes flicker {
+      0% {
+        opacity: 0.7;
+        transform: scale(0.98);
+      }
+
+      100% {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+  }
+
+
+
+  &__rotate {
+    animation: rotate 2s ease-out;
+
+    @keyframes rotate {
+      0% {
+        transform: rotate(153deg);
+      }
+
+      100% {
+        transform: rotate(0deg);
+      }
+    }
+
+    @-webkit-keyframes rotate {
+      0% {
+        transform: rotate(90deg);
+      }
+
+      100% {
+        transform: rotate(0deg);
+      }
+    }
+  }
+
+  &__zoomIn {
+    animation: zoomIn 1s ease-out;
+
+    @keyframes zoomIn {
+      0% {
+        transform: scale(0);
+      }
+
+      100% {
+        transform: scale(1);
+      }
+    }
+
+    @-webkit-keyframes zoomIn {
+      0% {
+        transform: scale(0);
+      }
+
+      100% {
+        transform: scale(1);
+      }
+    }
+  }
+
+  &__transformYTop {
+    animation: transformYTop 1s ease-out;
+    position: relative;
+
+    @keyframes transformYTop {
+      0% {
+        opacity: 0.7;
+        filter: blur(4px);
+        bottom: -100px;
+      }
+
+      100% {
+        opacity: 1;
+        filter: blur(0px);
+        bottom: 0px;
+      }
+    }
+
+    @-webkit-keyframes transformYTop {
+      0% {
+        opacity: 0.7;
+        filter: blur(4px);
+        bottom: -100px;
+      }
+
+      100% {
+        opacity: 1;
+        filter: blur(0px);
+        bottom: 0px;
+      }
+    }
+  }
+
+  &__transformXLeft {
+    animation: transformXLeft 1s ease-out;
+    position: relative;
+
+    @keyframes transformXLeft {
+      0% {
+        opacity: 0.7;
+        filter: blur(4px);
+        left: -100px;
+      }
+
+      100% {
+        opacity: 1;
+        filter: blur(0px);
+        left: 0px;
+      }
+    }
+
+    @-webkit-keyframes transformXLeft {
+      0% {
+        opacity: 0.7;
+        filter: blur(4px);
+        left: -100px;
+      }
+
+      100% {
+        opacity: 1;
+        filter: blur(0px);
+        left: 0px;
+      }
+    }
+  }
+
+  &__transformXRight {
+    animation: transformXRight 1s ease-out;
+    position: relative;
+
+    @keyframes transformXRight {
+      0% {
+        opacity: 0.7;
+        filter: blur(4px);
+        right: -100px;
+      }
+
+      100% {
+        opacity: 1;
+        filter: blur(0px);
+        right: 0px;
+      }
+    }
+
+    @-webkit-keyframes transformXRight {
+      0% {
+        opacity: 0.7;
+        filter: blur(4px);
+        right: -100px;
+      }
+
+      100% {
+        opacity: 1;
+        filter: blur(0px);
+        right: 0px;
+      }
+    }
+  }
 }
-
-.face {
-  position: absolute;
-  width: 200px;
-  height: 200px;
-  background-color: rgba(52, 152, 219, 0.8);
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  text-align: center;
-  font-size: 48px;
-  color: #fff;
-  line-height: 200px;
-}
-
-.front {
-  transform: translateZ(100px);
-}
-
-// @keyframes rotateCube {
-//   from {
-//     transform: rotateX(0deg) rotateY(0deg);
-//   }
-
-//   to {
-//     transform: rotateX(0deg) rotateY(360deg);
-//   }
-// }
