--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -47,7 +47,22 @@
 
 .font-fast-hand {
   font-family: var(--font-font-local);
+}
 
+.container-content {
+  width: 100%;
+  padding: 48px;
+  max-width: 1350px;
+  @media screen and (max-width: 768px) {
+    padding: 20px;
+  }
+}
+
+.container-base {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 body {
@@ -134,10 +149,12 @@ body {
 }
 
 .skeleton-loading {
-  background: linear-gradient(90deg,
-      rgba(0, 0, 0, 0.06) 25%,
-      rgba(0, 0, 0, 0.15) 37%,
-      rgba(0, 0, 0, 0.06) 63%);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0.06) 25%,
+    rgba(0, 0, 0, 0.15) 37%,
+    rgba(0, 0, 0, 0.06) 63%
+  );
   background-size: 400% 100%;
   background-size: 400% 100%;
   animation-name: loading;
@@ -167,9 +184,11 @@ body {
 }
 
 .line-loading {
-  background: radial-gradient(circle,
-      rgba(63, 94, 251, 1) 0%,
-      rgba(252, 70, 107, 1) 100%);
+  background: radial-gradient(
+    circle,
+    rgba(63, 94, 251, 1) 0%,
+    rgba(252, 70, 107, 1) 100%
+  );
   background-size: 400% 100%;
   background-size: 400% 100%;
   animation-name: loading;
@@ -203,7 +222,6 @@ body {
 }
 
 .animation {
-
   &__flicker {
     animation: flicker 1s infinite ease-in-out alternate;
 
@@ -231,8 +249,6 @@ body {
       }
     }
   }
-
-
 
   &__rotate {
     animation: rotate 2s ease-out;
