--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -51,10 +51,10 @@
 
 .container-content {
   width: 100%;
-  padding: 48px;
+  padding: 0px 48px;
   max-width: 1350px;
   @media screen and (max-width: 768px) {
-    padding: 20px;
+    padding: 0px 20px;
   }
 }
 
